<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/new_resident_layout_item">


        <TextView
            style="@style/new_resident_text_item"
            android:text="@string/add_resident_birthday" />

        <EditText
            android:id="@+id/edit_resident_birthdeta"
            style="@style/new_resident_edit_item"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/add_resident_birthday_hint" />

        <ImageView
            android:id="@+id/img_see_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_date" />
    </LinearLayout>

    <include layout="@layout/layout_divider_line_gray" />

    <LinearLayout
        style="@style/new_resident_layout_item"
        android:gravity="center_vertical">

        <TextView
            style="@style/new_resident_text_item"
            android:text="@string/add_resident_sex" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_add_resident_sex"
                android:padding="@dimen/dp_5"
                android:text="男"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:button="@drawable/selector_add_resident_sex"
                android:padding="@dimen/dp_5"
                android:text="女"
                android:textSize="@dimen/sp_14" />
        </RadioGroup>


    </LinearLayout>

    <include layout="@layout/layout_divider_line_gray_light" />


    <LinearLayout style="@style/new_resident_layout_item">

        <TextView
            style="@style/new_resident_text_item"
            android:text="@string/resident_age" />

        <EditText
            android:id="@+id/edit_age"
            android:maxLength="3"
            android:editable="false"
            style="@style/new_resident_edit_item"
            android:hint="@string/resident_age_hint"/>
    </LinearLayout>

    <include layout="@layout/layout_divider_line_gray_light" />

    <LinearLayout style="@style/new_resident_layout_item">

        <TextView
            style="@style/new_resident_text_item"
            android:text="@string/add_resident_address" />

        <EditText
            android:id="@+id/edit_address"
            style="@style/new_resident_edit_item"
            android:hint="@string/add_resident_address_hint"
            android:maxLength="50" />
    </LinearLayout>


    <include layout="@layout/layout_divider_line_gray_light" />

    <LinearLayout style="@style/new_resident_layout_item">

        <TextView
            style="@style/new_resident_text_item"
            android:text="@string/add_resident_social_number" />

        <EditText
            android:id="@+id/edit_society_num"
            style="@style/new_resident_edit_item"
            android:digits="@string/filter_vcode"
            android:hint="@string/add_resident_social_number_hint"
            android:inputType="number"
            android:maxLength="20" />
    </LinearLayout>

    <include layout="@layout/layout_divider_line_gray_light" />
</LinearLayout>