<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6fbff"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="#e4f2ff"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/all_task"
            android:textColor="@drawable/selector_task_tab_text_color"
            android:textSize="@dimen/sp15" />

        <RadioButton
            android:id="@+id/rbExtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/extract"
            android:textColor="@drawable/selector_task_tab_text_color"
            android:textSize="@dimen/sp15" />

        <RadioButton
            android:id="@+id/rbFile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/create_file"
            android:textColor="@drawable/selector_task_tab_text_color"
            android:textSize="@dimen/sp15" />
    </RadioGroup>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>