<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:background="@drawable/shape_edit_text_white_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:scaleType="fitCenter"
            android:src="@mipmap/login_account" />

        <EditText
            android:inputType="number"
            android:id="@+id/edForgetAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/input_phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/black6"
            android:textColorHint="@color/ccc"
            android:textSize="@dimen/sp14" />

        <ImageView
            android:id="@+id/ivClearForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_8"
            android:padding="@dimen/dp_6"
            android:scaleType="centerInside"
            android:src="@mipmap/ed_clear_icon"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/shape_edit_text_white_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:scaleType="fitCenter"
            android:src="@mipmap/login_vercode_icon" />

        <EditText
            android:inputType="number"
            android:id="@+id/edForgetCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/login_code"
            android:singleLine="true"
            android:textColor="@color/black6"
            android:textColorHint="@color/ccc"
            android:textSize="@dimen/sp14" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/btnCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/login_code_get"
            android:textSize="@dimen/sp12"
            android:background="@drawable/flat_button_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/shape_edit_text_white_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:scaleType="fitCenter"
            android:src="@mipmap/login_password" />

        <EditText
            android:maxLength="16"
            android:id="@+id/edNewPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/pwd_new_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black6"
            android:textColorHint="@color/ccc"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_weight="1">

        <Button
            android:textColor="@color/white"
            android:id="@+id/btnResetPwd"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:text="@string/reset_pwd"
            android:textSize="@dimen/sp14"
            android:background="@drawable/flat_button_style"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:src="@mipmap/login_back_arrow"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvForgetBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/black9"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

</LinearLayout>