<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accountLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_48"
    android:layout_marginRight="@dimen/dp_48"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@drawable/shape_edit_text_white_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:scaleType="fitCenter"
            android:src="@mipmap/login_account" />

        <EditText
            android:maxLines="1"
            android:maxLength="20"
            android:id="@+id/edAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/login_hint"
            android:singleLine="true"
            android:textColor="@color/black6"
            android:textColorHint="@color/ccc"
            android:textSize="@dimen/sp14" />

        <ImageView
            android:id="@+id/ivClearAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_8"
            android:padding="@dimen/dp_6"
            android:scaleType="centerInside"
            android:src="@mipmap/ed_clear_icon"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivAccountHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:src="@mipmap/login_account_arrow_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@drawable/shape_edit_text_white_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:scaleType="fitCenter"
            android:src="@mipmap/login_password" />

        <EditText
            android:maxLines="1"
            android:maxLength="20"
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_6"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black6"
            android:textColorHint="@color/ccc"
            android:textSize="@dimen/sp14" />

        <ImageView
            android:id="@+id/ivClearPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_8"
            android:padding="@dimen/dp_6"
            android:scaleType="centerInside"
            android:src="@mipmap/ed_clear_icon"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivSeePwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:src="@mipmap/login_password_eye_icon" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/flat_button_style"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp15"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18">

        <TextView
            android:id="@+id/tvForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:padding="@dimen/dp_8"
            android:text="@string/forget_pwd"
            android:textColor="@color/gray" />

    </RelativeLayout>
</LinearLayout>