<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/white"
              android:gravity="center"
              android:orientation="vertical">

    <com.gcssloop.widget.RCRelativeLayout
        android:id="@+id/iv_resident_head"
        android:layout_width="73dip"
        android:layout_height="73dip"
        android:layout_marginTop="@dimen/dp_10"
        app:round_corner="10dp"
        app:stroke_width="@dimen/dp_1"
        app:stroke_color="@color/blackD"
        android:clickable="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@color/tab_resident_background"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-18dp"
            android:gravity="center"
            android:text="无"
            android:textColor="@color/resident_first_name"
            android:textSize="74sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    </com.gcssloop.widget.RCRelativeLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="6"
        android:maxLines="1"
        android:layout_margin="@dimen/dp_2"
        android:text="@string/current_resident"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:maxLines="1"
            android:text="@string/age"
            android:textColor="@color/black9"
            android:textSize="@dimen/sp12"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvSignFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_sign_text_bg"
            android:paddingLeft="@dimen/dp_3"
            android:paddingRight="@dimen/dp_3"
            android:text="@string/sign"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/user_phone_icon" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:text=""
            android:visibility="visible" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tagRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_4"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_history_record_bg"
        android:clickable="true"
        android:drawableLeft="@mipmap/ic_history_icon"
        android:drawablePadding="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_6"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingTop="@dimen/dp_6"
        android:layout_marginBottom="@dimen/dp_6"
        android:text="@string/history"
        android:textColor="@drawable/selector_service_text_color" />
</LinearLayout>
